--- a/src/index.css
+++ b/src/index.css
@@ -74,17 +74,15 @@ button:focus-visible {
 } */
 
 :root {
-  --color-bg: #0d121f;
-  --color-bg-variant: #00000040;
-  --color-white: #f3f5f7;
-  --color-purple: #7c5cfc;
-  --text-color: #040815;
-  --color-error: #ff4423;
-  --color-success: #9cd323;
-  --color-gray: #596780;
-  --color-gray-shade: #90a3bf;
-  --color-gray-variant: #1a202c;
-  --box-shadow: #00000040;
+  --color-bg: #000000;
+  --color-bg-variant: #0d141c;
+  --color-variant: #060d17;
+  --color-bg-white: #ffffff;
+  --color-variant: #ffcc00;
+  --text-primary: #fed000;
+  --text-white: #ffffff;
+  --text-gray: #a5a5a5;
+  --text-black: #0d141c;
 }
 
 html {
@@ -106,46 +104,94 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .page__container {
-    margin: auto;
-    width: 96vw;
-    margin-top: 15px;
+  /* ================== Landing Page ==================  */
+
+  .landingpage__container {
   }
 
-  .page__container-top {
-    background: #f0f0f0;
-    height: 65vh;
-    border-radius: 50px;
-    padding: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .landingpage__slide-one {
+    height: 100vh;
+    /* background: var(--color-bg);
+     */
+    /* background-image: url(./assets/12893174_5072609.jpg); */
+    color: var(--text-white);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-top: 300px;
   }
 
-  .page__container-bottom {
-    margin-top: 15px;
-    margin-bottom: 80px;
-    background: #23262f;
-    height: 30vh;
-    padding: 15px;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  .landingpage__slide-one h1 {
+    font-size: 2.2rem;
+    color: var(--text-primary);
     text-align: center;
+    font-weight: 800;
+    line-height: 40px;
   }
 
-  .page__container-bottom h1 {
-    color: #ffffff;
-    margin-bottom: 20px;
-    font-size: 1.4rem;
+  .landingpage__slide-one h2 {
+    font-size: 1.8rem;
+    text-align: center;
+    font-weight: 500;
   }
 
-  .page__container-bottom p {
-    color: #c7c8cb;
+  .landingpage__slide-one p {
     font-size: 0.9rem;
+    font-weight: 400;
+    text-align: center;
+    color: var(--text-gray);
   }
+
+  .landingpage__slide-one a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--text-primary);
+    float: right;
+    color: var(--text-black);
+    padding: 20px;
+    width: 80px;
+    font-size: 2rem;
+    border-radius: 40%;
+    margin-top: 70px;
+    margin-right: 50px;
+  }
+
+  .landingpage__slide-two {
+    height: 100vh;
+    padding-top: 200px;
+  }
+
+  .landingpage__slide-two h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    text-align: center;
+    margin-top: 10px;
+    line-height: 40px;
+  }
+
+  .landingpage__slide-two p {
+    font-size: 1.2rem;
+    text-align: center;
+    margin-top: 20px;
+    color: var(--text-gray);
+  }
+
+  .landingpage__slide-two a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--text-primary);
+    float: right;
+    color: var(--text-black);
+    padding: 20px;
+    width: 80px;
+    font-size: 2rem;
+    border-radius: 40%;
+    margin-top: 70px;
+    margin-right: 50px;
+  }
+
   /* ================== Balance Page ==================  */
 
   .balance__container {
@@ -201,4 +247,7 @@ body {
     border-radius: 14px;
     font-size: 1.2rem;
   }
+}
+
+.landingpage__container {
 }
