--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ button:focus-visible {
   --text-primary-variant: #75580c;
   --text-white: #ffffff;
   --text-gray: #a5a5a5;
+  --text-gray-variant: #5b5f62;
   --text-black: #0d141c;
 }
 
@@ -216,6 +217,40 @@ body {
     text-align: center;
     margin-top: 20px;
     color: var(--text-primary-variant);
+  }
+
+  .landingpage__slide-four img {
+    margin: auto;
+  }
+
+  .landingpage__slide-four h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+    text-align: center;
+    margin-top: 20px;
+    line-height: 40px;
+  }
+
+  .landingpage__slide-four p {
+    font-size: 1.2rem;
+    text-align: center;
+    margin-top: 20px;
+    color: var(--text-gray-variant);
+    margin-bottom: 20px;
+  }
+
+  .landingpage__slide-four button {
+    width: 90vw;
+    background: var(--text-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    border-radius: 40px;
+    margin: auto;
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-transform: uppercase;
   }
 
   /* ================== Balance Page ==================  */
