--- a/src/index.css
+++ b/src/index.css
@@ -4,75 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
 :root {
   --color-bg: #000000;
   --color-bg-variant: #0d141c;
@@ -251,6 +182,49 @@ body {
     font-size: 1.5rem;
     font-weight: 500;
     text-transform: uppercase;
+  }
+
+  /* ================== Banner Page ==================  */
+
+  .banner__container {
+    height: fit-content;
+    background: var(--text-black);
+    padding: 10px;
+    padding-top: 280px;
+  }
+
+  .banner__container h1 {
+    color: var(--text-white);
+    font-size: 2.5rem;
+    font-weight: 800;
+  }
+
+  .banner__container p {
+    max-width: 96vw;
+    font-size: 0.8rem;
+    color: var(--text-gray);
+    /* text-align: center; */
+  }
+
+  .balance__signin {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--text-primary);
+    color: var(--text-black);
+    padding: 16px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+  }
+  .balance__signup {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--text-primary);
+    padding: 16px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    border: 1px solid var(--text-primary);
   }
 
   /* ================== Balance Page ==================  */
