--- a/src/index.css
+++ b/src/index.css
@@ -282,4 +282,16 @@ body {
   .signin__container p a {
     color: var(--text-primary);
   }
+
+  .create__container h1 {
+    font-size: 2rem;
+  }
+
+  .create__container p {
+    text-align: left;
+    color: var(--text-gray-variant);
+    font-size: 0.9rem;
+    line-height: 20px;
+    margin-bottom: 40px;
+  }
 }
