--- a/src/index.css
+++ b/src/index.css
@@ -330,11 +330,57 @@ body {
   /* ================== Dashboard Page ==================  */
 
   .dashboard__feature {
-    /* width: 90vw; */
-    /* margin: auto; */
-    /* height: 20vh; */
-    /* background: var(--color-variant); */
-    /* padding: 10px; */
+    padding: 10px;
     color: var(--text-white);
+  }
+
+  .dashboard__banner {
+    /* background: var(--text-gray-variant); */
+    max-height: 254vh;
+    width: 90vw;
+    margin: auto;
+    margin-top: 20px;
+  }
+
+  .dashboard__leader {
+    background: rgba(255, 204, 0, 0.9);
+    padding: 12px;
+    border-radius: 20px;
+    position: relative;
+  }
+
+  .dashboard__leader h3 {
+    font-weight: 800;
+  }
+
+  .dashboard__leader p {
+    /* font-size: 0.8rem; */
+  }
+
+  .dashboard__leader a {
+    font-weight: 600;
+  }
+
+  .dashboard__leader img {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    transform: rotate(-20deg);
+  }
+
+  .dashboard__kyc {
+    background: #0b121c;
+    color: var(--text-white);
+    padding: 12px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .crypto__assets {
+    width: 90vw;
+    margin: auto;
+    padding: 12px;
   }
 }
