--- a/src/index.css
+++ b/src/index.css
@@ -382,6 +382,9 @@ body {
     width: 90vw;
     margin: auto;
     padding-top: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 
   .crypto__assets {
@@ -406,7 +409,46 @@ body {
 
   .crypto__container {
     background: #000;
-    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    /* height: 10vh; */
     border-radius: 6px;
+    color: var(--text-white);
+    padding: 12px;
+  }
+
+  .left__crypto-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+  .right__crypto-container {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+
+  .right__crypto-container div {
+    width: 60px;
+    background: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 24px;
+  }
+
+  .left__crypto-container p {
+    /* font-size: 1.2rem; */
+    font-weight: 500;
+  }
+
+  .left__crypto-container span {
+    font-size: 0.9rem;
+    font-weight: 300;
+  }
+
+  .right__crypto-container .crypto__assets-icon {
+    font-size: 1.2rem;
+    color: var(--text-gray);
   }
 }
