--- a/src/index.css
+++ b/src/index.css
@@ -214,6 +214,7 @@ body {
 
   .signin__container input {
     width: 90vw;
+    height: 70px;
     background: var(--color-variant);
     padding: 10px;
     border-radius: 10px;
@@ -266,14 +267,19 @@ body {
     margin-bottom: 40px;
   }
 
+  .signup__container {
+    padding-top: 16px;
+  }
+
   .signup__container h1 {
-    font-size: 2rem;
+    font-size: 2.2rem;
   }
   .signup__container p {
     text-align: left;
     font-size: 1rem;
     color: var(--text-gray);
     margin-bottom: 2rem;
+    line-height: 22px;
   }
 
   .navbar__container {
