--- a/src/component/landingpage/landingpage.css
+++ b/src/component/landingpage/landingpage.css
@@ -1,116 +1,86 @@
-@media screen and (max-width: 600px) {
-  .landingpage__slide-one {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-image: url(../../assets/12893174_5072609.jpg);
-    color: var(--text-white);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+.navbar__section {
+  width: 100vw;
+  height: 10vh;
+  background: #000;
+  color: var(--text-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .landingpage__slide-one h1 {
-    font-size: 3rem;
-    text-align: center;
-    font-weight: 800;
-    line-height: 40px;
-    margin-bottom: 10px;
-  }
+.banner__section {
+  padding-top: 80px;
+}
 
-  .landingpage__slide-one h2 {
-    font-size: 2.2rem;
-    text-align: center;
-    font-weight: 500;
-  }
+.banner__section h1 {
+  max-width: 900px;
+  margin: 0 auto;
+  font-size: 6rem;
+  font-weight: 600;
+  line-height: 81px;
+  letter-spacing: -4.8px;
+  text-align: center;
+}
 
-  .landingpage__slide-one p {
-    font-size: 1.2rem;
-    font-weight: 400;
-    text-align: center;
-  }
+.banner__section h1 span {
+  color: #ffcc00;
+}
 
-  .landingpage__slide-one button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--text-primary);
-    float: right;
-    color: var(--text-black);
-    padding: 16px;
-    width: 70px;
-    font-size: 2rem;
-    border-radius: 40%;
-    margin-top: 70px;
-    margin-right: 50px;
-  }
+.banner__section p {
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 44px;
+  letter-spacing: -0.72px;
+  margin: 30px auto;
+}
 
-  .landingpage__slide-three {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: var(--text-primary);
-    height: 100vh;
-  }
+.banner__section a {
+  display: flex;
+  max-width: 22.5rem;
+  width: 100%;
+  height: 3rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.3125rem;
+  background: #ffcc00;
+  color: #fcfcfd;
+  margin: 1.875rem auto 0;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+}
 
-  .landingpage__slide-three h1 {
-    margin-top: 150px;
-    margin-bottom: 20px;
-    font-size: 2.5rem;
-    font-weight: 800;
-    text-align: center;
-    line-height: 50px;
-  }
+.video__section {
+  width: 95%;
+  height: 100vh;
+  background: var(--text-gray);
+  margin: auto;
+  margin-top: 100px;
+}
 
-  .landingpage__slide-three p {
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 10px;
-    color: var(--text-primary-variant);
-  }
+.text__section p {
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 2.75rem;
+  letter-spacing: -0.025rem;
+  margin: 1.875rem auto;
+  max-width: 59.375rem;
+}
 
-  .landingpage__slide-four {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+.text__section h3 {
+  text-align: center;
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 44px;
+  letter-spacing: -0.72px;
+}
 
-  .landingpage__slide-four img {
-    margin-top: 50px;
-  }
-
-  .landingpage__slide-four h1 {
-    font-size: 2.5rem;
-    font-weight: 800;
-    text-align: center;
-    line-height: 40px;
-    margin-top: 50px;
-  }
-
-  .landingpage__slide-four p {
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 20px;
-    color: var(--text-gray-variant);
-    margin-bottom: 80px;
-    line-height: 24px;
-  }
-
-  .landingpage__slide-four a {
-    width: 90vw;
-    background: var(--text-primary);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 16px;
-    border-radius: 40px;
-    margin: auto;
-    font-size: 1.5rem;
-    font-weight: 500;
-    text-transform: uppercase;
-  }
+.img {
+  color: red;
 }
