--- a/src/component/landingpage/landingpage.css
+++ b/src/component/landingpage/landingpage.css
@@ -81,6 +81,15 @@
   letter-spacing: -0.72px;
 }
 
-.img {
-  color: red;
+.features__section {
+  /* display: flex; */
+  gap: 1.5625rem;
+}
+
+.features__icon {
+  color: var(--text-primary);
+  font-size: 1.5rem;
+}
+
+.features__box {
 }
