--- a/src/component/landingpage/landingpage.css
+++ b/src/component/landingpage/landingpage.css
@@ -52,12 +52,29 @@
   font-weight: 500;
 }
 
+@media (max-width: 500px) {
+  .banner__section {
+    max-width: 25rem;
+  }
+  .banner__section h1 {
+    font-size: 3rem;
+    line-height: 44px;
+  }
+  .banner__section p {
+    font-size: 20px;
+  }
+}
+
 .video__section {
   width: 95%;
   height: 100vh;
   background: var(--text-gray);
   margin: auto;
   margin-top: 100px;
+}
+.video__iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .text__section p {
@@ -89,7 +106,4 @@
 .features__icon {
   color: var(--text-primary);
   font-size: 1.5rem;
-}
-
-.features__box {
 }
