--- a/src/component/modal/modal.css
+++ b/src/component/modal/modal.css
@@ -21,19 +21,27 @@ body.active-modal {
 }
 
 .overlay {
-  background: rgba(49, 49, 49, 0.8);
+  background: rgba(49, 49, 49, 0.3);
 }
+
 .modal-content {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
-  background: #f1f1f1;
+  background: var(--color-bg-variant);
+  color: var(--text-gray);
   padding: 14px 28px;
-  border-radius: 3px;
-  max-width: 600px;
-  min-width: 300px;
+  border-radius: 20px;
+  width: 90vw;
+  height: 55vh;
+}
+
+.modal-content h2 {
+  font-weight: 600;
+  font-size: 1.25rem;
+  margin-bottom: 40px;
 }
 
 .close-modal {
@@ -41,4 +49,29 @@ body.active-modal {
   top: 10px;
   right: 10px;
   padding: 5px 7px;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.modal-container {
+  /* background: red; */
+  width: 100%;
+  height: 20vh;
+}
+
+.modal-container img {
+  display: flex;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+.bitcoin__address-container {
+  border-radius: 10px;
+  background: var(--color-bg-white);
+  color: var(--text-primary-variant);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
